Fix things that disappeared from my git: searchbox spacing, no dropdowns in footer, sub-menu only on ovp page

--- a/blakearchive/static/css/main.css
+++ b/blakearchive/static/css/main.css
@@ -237,6 +237,11 @@ a.new-window {
   text-align:  center;
 }
 
+#home.container-fluid.main .row div[class^="col-"] {
+  padding-left: 1px;
+  padding-right: 1px;
+}
+
 /**
 * Used by drag and drop module
 */
