--- a/blakearchive/static/css/styles.css
+++ b/blakearchive/static/css/styles.css
@@ -6440,7 +6440,7 @@ h3 {
   height: 41px;
   padding-top: 11px;
   float: right;
-  margin-right: -4%;
+  margin-right: -.5%;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
   .lightbox {
